--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,10 @@
     --color-primary: #4d5b42;
     --color-primary-content: #c6d2be;
 
-    --color-secondary: #9db191;
+    --color-secondary: #8fa382;
     --color-secondary-content: #1f1f1f;
 
-    --color-accent: #d4af33;
+    --color-accent: #e0b95e;
     --color-accent-content: #f4f5f6;
 
     --color-neutral: #444444;
